# distributed_kron

./: README.md  cifar_viz.py  kron_example.py  pyproject.toml
distributed_kron/: __init__.py  kron.py  kron_example.py
