[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "distributed-kron"
version = "0.1.0"
description = "An implementation of PSGD Kron optimizer in JAX/Flax/optax for distributed training."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Evan Walters" },
]
keywords = [
    "python",
    "machine learning",
    "optimization",
    "jax",
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "chex",
    "jax",
    "jaxlib",
    "flax",
    "optax",
]

[project.urls]
homepage = "https://github.com/evanatyourservice/distributed_kron"
repository = "https://github.com/evanatyourservice/distributed_kron"
